--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.2.0"
   },
   "devDependencies": {
